 720.	[bug]		Server could enter infinite loop in
			dispatch.c:do_cancel(). [RT #743]

 719.	[bug]		Rapid reloads could trigger an assertion failure.
			[RT #743, #763]

 717.	[bug]		Certain TKEY processing failure modes could
			reference an uninitialized variable, causing the
			server to crash. [RT #750]

 716.	[bug]		The first line of a $INCLUDE master file was lost if
			a origin was specified. [RT #744]

 715.	[bug]		Resolving some A6 chains could cause an assertion
			failure in adb.c. [RT #738]

 711.	[bug]		The libisc and liblwres implementations of
			inet_ntop contained an off by one error.

 706.	[bug]		Zones with an explicit "allow-update { none; };"
			were considered dynamic and therefore not reloaded
			on SIGHUP or "rndc reload".

 700.	[bug]		$GENERATE range check was wrong. [RT #688]

 698.	[bug]		Aborting nsupdate with ^C would lead to several
			race conditions.

 699.	[bug]		The lexer mishandled empty quoted strings. [RT #694]

 694.	[bug]		$GENERATE did not produce the last entry.
			[RT #682, #683]

 693.   [bug]           An empty lwres statement in named.conf caused
                        the server to crash while loading.

 691.	[bug]		Configuring per-view forwarders caused an assertion
			failure. [RT #675, #734]

	--- 9.1.0 released ---

 687.	[bug]		Only say we have IPv6, with sufficent functionality,
			if it has actually been tested.  [RT #586]

 685.	[bug]		nslookup should use the search list/domain options
			from resolv.conf by default. [RT #405, #630]

 684.	[bug]		Memory leak with view forwarders. [RT #656]

 683.	[bug]		File descriptor leak in isc_lex_openfile().

 682.	[bug]		nslookup displayed SOA records incorrectly. [RT #665]

 681.	[bug]		$GENERATE specifying output format was broken. [RT #653]

 680.	[bug]		dns_rdata_fromstruct() mishandled options bigger
			than 255 octets.

 652.	[bug]		zone_saveunique() did not report the new name.
			[RT #668]

 650.	[bug]		SIG(0) records were being generated and verified