@@ -1,3 +1,7 @@
+
+ 723.	[bug]		Referrals whose NS RRs had a 0 TTL caused the resolver
+			to return DNS_R_SERVFAIL. [RT #783]
+
  720.	[bug]		Server could enter infinite loop in
 			dispatch.c:do_cancel(). [RT #743]
 
